Labb 2 - Implemented changes according to AI Feedback